# p6

./: pyproject.toml
src/: p6.py
